--- a/style.css
+++ b/style.css
@@ -2,4 +2,18 @@ html {
     height: 100%;
     width: 100%;
   }
-  
+
+  /* Todos los elementos H1 serán verdes */
+h1 {
+  color: green;
+}
+
+/* Clase "azul" = texto azul */
+.azul {
+  color: blue;
+}
+
+/* ID "rojo" = texto rojo */
+#rojo {
+  color: red;
+}
